--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 
                 <ul class="footer__links">
                     <li>
-                        <a href="#" class="footer__link">manasvi.shetty@somaiya.edu</a>
+                        <a href="mailto:manasvi.shetty@somaiya.edu" class="footer__link">manasvi.shetty@somaiya.edu</a>
                     </li>
                     <li>
                         <a href="#" class="footer__link">+91 81xxxxxx51</a>
