Updated Roles Section

--- a/index.html
+++ b/index.html
@@ -125,38 +125,38 @@
         </section>
 
        <!-- ---Projects--- -->
-        <section class="featured section container" id="featured">
+        <section class="projects section container" id="projects">
             <h2 class="section__title">
               Featured Projects
             </h2>
 
-            <div class="featured__container grid">
-                <article class="featured__card">
+            <div class="projects__container grid">
+                <article class="projects__card">
 
-                    <div class="featured__data">
-                        <h3 class="featured__title">Payment Site</h3>
+                    <div class="projects__data">
+                        <h3 class="projects__title">Payment Site</h3>
                     </div>
 
-                    <button class="button featured__button">Go to Site</button>
+                    <button class="button projects__button">Go to Site</button>
                 </article>
 
-                <article class="featured__card">
+                <article class="projects__card">
                 
 
-                    <div class="featured__data">
-                        <h3 class="featured__title">Clock System</h3>
+                    <div class="projects__data">
+                        <h3 class="projects__title">Clock System</h3>
                     </div>
 
-                    <button class="button featured__button">Go to Site</button>
+                    <button class="button projects__button">Go to Site</button>
                 </article>
 
-                <article class="featured__card">
+                <article class="projects__card">
 
-                    <div class="featured__data">
-                        <h3 class="featured__title">Parking App</h3>
+                    <div class="projects__data">
+                        <h3 class="projects__title">Parking App</h3>
                     </div>
 
-                    <button class="button featured__button">Go to Site</button>
+                    <button class="button projects__button">Go to Site</button>
                 </article>
             </div>
         </section>
