--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a href="#home" class="nav__link active-link">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#featured" class="nav__link">Projects</a>
+                        <a href="#projects" class="nav__link">Projects</a>
                     </li>
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">Skills</a>
