--- a/index.html
+++ b/index.html
@@ -100,20 +100,20 @@
         </section>
 
          <!-- ---About--- -->
-         <section class="story section container">
-            <div class="story__container grid">
+         <section class="about section container">
+            <div class="about__container grid">
 
-                <div class="story__images">
-                    <img src="images/my img (2).jpg" alt="" class="story__img">
-                    <div class="story__square"></div>
+                <div class="about__images">
+                    <img src="images/my img (2).jpg" alt="" class="about__img">
+                    <div class="about__square"></div>
                 </div>
 
-                <div class="story__data">
-                    <h2 class="section__title story__section-title">
+                <div class="about__data">
+                    <h2 class="section__title about__section-title">
                        About Me
                     </h2>
 
-                    <p class="story__description">
+                    <p class="about__description">
             I am an Engineering undergraduate at K.J. Somaiya Institute of Engineering and Information Technology. I
             love designing and building things for the web. I am an enthusiatic person looking
             forward to new experiences.
