--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                     <img src="images/mslogo.png" alt="" class="home__img">
                 </div>
 
-                <div class="home__social">
+                <div class="home__social"> 
+                    <a href="https://www.behance.net/manasvishetty42" target="_blank" class="home__social-link">
+                        <i class='bx bxl-behance'></i>
+                    </a>
+                    
                     <a href="https://www.github.com/Manasvi-Shetty" target="_blank" class="home__social-link">
                         <i class='bx bxl-github'></i>
                     </a>
@@ -86,6 +90,7 @@
                     <a href="https://www.linkedin.com/in/manasvi-shetty/" target="_blank" class="home__social-link">
                         <i class='bx bxl-linkedin'></i>
                     </a>
+
                 </div>
 
                 <div class="home__data">
@@ -355,6 +360,10 @@
 
                     <a href="https://www.github.com/Manasvi-Shetty" target="_blank" class="footer__social-link">
                         <i class='bx bxl-github'></i>
+                    </a>
+
+                    <a href="https://www.behance.net/manasvishetty42" target="_blank" class="footer__social-link">
+                        <i class='bx bxl-behance'></i>
                     </a>
                 </ul>
             </div>
