--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <a href="https://www.behance.net/manasvishetty42" target="_blank" class="home__social-link">
                         <i class='bx bxl-behance'></i>
                     </a>
-                    
+
                     <a href="https://www.github.com/Manasvi-Shetty" target="_blank" class="home__social-link">
                         <i class='bx bxl-github'></i>
                     </a>
@@ -341,7 +341,7 @@
                         <a href="mailto:manasvi.shetty@somaiya.edu" class="footer__link">manasvi.shetty@somaiya.edu</a>
                     </li>
                     <li>
-                        <a href="#" class="footer__link">+91 81xxxxxx51</a>
+                        <a href=" https://wa.me/918104797851" class="footer__link">+91 81xxxxxx51</a>
                     </li>
                 </ul>
             </div>
