--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         <a href="#projects" class="footer__link">Projects</a>
                     </li>
                     <li>
-                        <a href="#products" class="footer__link">Skills</a>
+                        <a href="#skills" class="footer__link">Skills</a>
                     </li>
                     <li>
                         <a href="#roles" class="footer__link">Roles</a>
