--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- ---------------------Main----------------------- -->
     <main class="main">
         <!-- ---Home--- -->
-        <section class="home" id="home">
+        <section class="home" id="home" class="hidden">
             <div class="home__container container grid">
                 <div class="home__img-bg">
                     <img src="images/mslogo.png" alt="" class="home__img">
@@ -113,7 +113,7 @@
         </section>
 
         <!-- ---About--- -->
-        <section class="about section container" id="about">
+        <section class="about section container" id="about" class="hidden">
             <div class="about__container grid">
 
                 <div class="about__images">
@@ -139,7 +139,7 @@
         </section>
 
         <!-- ---Projects--- -->
-        <section class="projects section container" id="projects">
+        <section class="projects section container" id="projects" class="hidden">
             <h2 class="section__title">
                 Featured Projects
             </h2>
@@ -176,7 +176,7 @@
         </section>
 
         <!-- ---Skills---- -->
-        <section class="skills section container" id="skills">
+        <section class="skills section container" id="skills" class="hidden">
             <h2 class="section__title">
                 My Skills
             </h2>
@@ -236,7 +236,7 @@
         </section>
 
         <!-- ---Roles---- -->
-        <section id="roles">
+        <section id="roles" class="hidden">
             <h2 class="section__title roles">
                 My Roles
             </h2>
@@ -300,7 +300,7 @@
     </main>
 
     <!-- ----------------------Footer ---------------------------->
-    <footer class="footer section" id="contact">
+    <footer class="footer section" id="contact" class="hidden">
         <div class="footer__container container grid">
             <div class="footer__content">
                 <h3 class="footer__title">Manasvi Shetty</h3>
