--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- ---------------------Main----------------------- -->
     <main class="main">
         <!-- ---Home--- -->
-        <section class="home" id="home" class="hidden">
+        <section class="home" id="home" >
             <div class="home__container container grid">
                 <div class="home__img-bg">
                     <img src="images/mslogo.png" alt="" class="home__img">
@@ -113,7 +113,7 @@
         </section>
 
         <!-- ---About--- -->
-        <section class="about section container" id="about" class="hidden">
+        <section class="about section container" id="about" >
             <div class="about__container grid">
 
                 <div class="about__images">
@@ -139,7 +139,7 @@
         </section>
 
         <!-- ---Projects--- -->
-        <section class="projects section container" id="projects" class="hidden">
+        <section class="projects section container" id="projects" >
             <h2 class="section__title">
                 Featured Projects
             </h2>
@@ -176,7 +176,7 @@
         </section>
 
         <!-- ---Skills---- -->
-        <section class="skills section container" id="skills" class="hidden">
+        <section class="skills section container" id="skills" >
             <h2 class="section__title">
                 My Skills
             </h2>
@@ -236,7 +236,7 @@
         </section>
 
         <!-- ---Roles---- -->
-        <section id="roles" class="hidden">
+        <section id="roles" >
             <h2 class="section__title roles">
                 My Roles
             </h2>
