--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <section class="home" id="home" >
             <div class="home__container container grid">
                 <div class="home__img-bg">
-                    <img src="images/mslogo.png" alt="" class="home__img">
+                    <img src="images/3dlogo.png" alt="" class="home__img">
                 </div>
 
                 <div class="home__social"> 
