--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="#about" class="nav__link active-link">About</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#projects" class="nav__link">Projects</a>
+                        <a href="#projects" class="nav__link">Works</a>
                     </li>
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">Skills</a>
@@ -141,14 +141,14 @@
         <!-- ---Projects--- -->
         <section class="projects section container" id="projects" >
             <h2 class="section__title">
-                Featured Projects
+                My Works
             </h2>
 
             <div class="projects__container grid">
                 <article class="projects__card">
 
                     <div class="projects__data">
-                        <h3 class="projects__title">Payment Site</h3>
+                        <h3 class="projects__title">Student Finance App UI</h3>
                     </div>
 
                     <button class="button projects__button">Go to Site</button>
@@ -158,20 +158,13 @@
 
 
                     <div class="projects__data">
-                        <h3 class="projects__title">Clock System</h3>
+                        <h3 class="projects__title">GDSC WOW UX Case Study</h3>
                     </div>
 
                     <button class="button projects__button">Go to Site</button>
                 </article>
 
-                <article class="projects__card">
-
-                    <div class="projects__data">
-                        <h3 class="projects__title">Parking App</h3>
-                    </div>
-
-                    <button class="button projects__button">Go to Site</button>
-                </article>
+               
             </div>
         </section>
 
@@ -191,16 +184,16 @@
                 </article>
 
                 <article class="skills__card">
-                    <i class='bx bxl-java bx-lg'></i>
+                    <i class='bx bxl-c-plus-plus bx-lg'></i>
 
-                    <h3 class="skills__title">Java</h3>
+                    <h3 class="skills__title">C++</h3>
 
                 </article>
 
                 <article class="skills__card">
                     <i class='bx bxl-angular bx-lg'></i>
 
-                    <h3 class="skills__title">Angular.js</h3>
+                    <h3 class="skills__title">Angular</h3>
 
 
 
@@ -322,7 +315,7 @@
                         <a href="#about" class="footer__link">About</a>
                     </li>
                     <li>
-                        <a href="#projects" class="footer__link">Projects</a>
+                        <a href="#projects" class="footer__link">Works</a>
                     </li>
                     <li>
                         <a href="#skills" class="footer__link">Skills</a>
