--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <h3 class="projects__title">Student Finance App UI</h3>
                     </div>
 
-                    <button class="button projects__button">Go to Site</button>
+                    <button  class="button projects__button"> <a href="https://www.behance.net/gallery/155133927/Expense-Tracker-Mobile-UI" target=”_blank”>View Project </a></button>
                 </article>
 
                 <article class="projects__card">
@@ -161,7 +161,7 @@
                         <h3 class="projects__title">GDSC WOW UX Case Study</h3>
                     </div>
 
-                    <button class="button projects__button">Go to Site</button>
+                    <button class="button projects__button"> <a href="https://www.behance.net/gallery/174180659/GDSC-WoW-Logo-Redesign-and-Branding" target=”_blank”>View Project</a></button>
                 </article>
 
                
