--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         forward to new experiences.
                     </p>
 
-                    <a href="pdf/Manasvi Shetty Resume.pdf" download="" class="button button--small">My Resume</a>
+                    
                 </div>
             </div>
         </section>
@@ -164,7 +164,15 @@
                     <button class="button projects__button"> <a href="https://www.behance.net/gallery/174180659/GDSC-WoW-Logo-Redesign-and-Branding" target=”_blank”>View Project</a></button>
                 </article>
 
-               
+                <article class="projects__card">
+
+
+                    <div class="projects__data">
+                        <h3 class="projects__title">Felicity Games Portfolio</h3>
+                    </div>
+
+                    <button class="button projects__button"> <a href="https://felicitygames.com/" target=”_blank”>View Project</a></button>
+                </article>
             </div>
         </section>
 
@@ -237,17 +245,16 @@
                 <div class="card">
                     <div class="content">
                         <h2>01</h2>
-                        <h3>GDSC Lead</h3>
-                        <h4>Google Developer Student Clubs (Jul 2022 - Present)</h4>
-
+                        <h3>Web Developer Intern</h3>
+                        <h4>NPST Ltd.<br> (Dec 2022 - Jun 2023)</h4>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="content">
                         <h2>02</h2>
-                        <h3>Chief Executive Officer</h3>
-                        <h4>IET KJSIEIT<br> (Aug 2022 - Present)</h4>
+                        <h3>GDSC Lead</h3>
+                        <h4>Google Developer Student Clubs (Jul 2022 - Jun 2023)</h4>
 
                     </div>
                 </div>
@@ -264,8 +271,8 @@
                 <div class="card">
                     <div class="content">
                         <h2>04</h2>
-                        <h3>Jt. Technical Head</h3>
-                        <h4>IET KJSIEIT<br> (Aug 2021 - Jul 2022)</h4>
+                        <h3>Core team Volunteer</h3>
+                        <h4>Friends of Figma<br> (Aug 2023 - Present)</h4>
 
                     </div>
                 </div>
@@ -273,16 +280,16 @@
                 <div class="card">
                     <div class="content">
                         <h2>05</h2>
-                        <h3>Corporate Team Member</h3>
-                        <h4>DSC KJSIEIT<br> (Jan 2022 - Jul 2022)</h4>
+                        <h3>Chief Executive Officer</h3>
+                        <h4>IET KJSIEIT<br>(Aug 2022 - Jun 2023)</h4>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="content">
                         <h2>06</h2>
-                        <h3> Development Intern</h3>
-                        <h4>NPST<br> (Jan 2022 - Jul 2022)</h4>
+                        <h3> Web Developer</h3>
+                        <h4>Felicity Games<br> (Aug 2023 - Sept 2023)</h4>
 
                     </div>
                 </div>
