--- a/index.html
+++ b/index.html
@@ -127,10 +127,11 @@
                     </h2>
 
                     <p class="about__description">
-                        I am an Engineering undergraduate at K.J. Somaiya Institute of Engineering and Information
-                        Technology. I
-                        love designing and building things for the web. I am an enthusiatic person looking
-                        forward to new experiences.
+                        Hey there!🙋‍♀️<br>
+                        <br>
+
+                        I am an enthusiatic person looking
+                        forward to new experiences.My passion lies in transforming ideas into tangible solutions that provide real value to people. If you're eager to collaborate on a project or simply want to connect, Welcome! Let's stir up some innovation together⚡
                     </p>
 
                     
